--- a/.github/workflows/cloudflare-pages.yml
+++ b/.github/workflows/cloudflare-pages.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install and build
         run: |
           cd knowledge-map-ui
-          npm install
+          npm install --legacy-peer-deps
           npm run build
 
       - name: Deploy to Cloudflare Pages
