--- a/.github/workflows/cloudflare-pages.yml
+++ b/.github/workflows/cloudflare-pages.yml
@@ -26,6 +26,14 @@ jobs:
           npm install --legacy-peer-deps
           npm run build
 
+      - name: Debug env (safe)
+        run: |
+          echo "ACCOUNT_ID length: ${#CLOUDFLARE_ACCOUNT_ID}"
+          echo "TOKEN length: ${#CLOUDFLARE_API_TOKEN}"
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+
       - name: Deploy to Cloudflare Pages
         run: npx wrangler pages deploy knowledge-map-ui/dist/knowledge-map-ui/browser --project-name knowledge-map --branch main --account-id $CLOUDFLARE_ACCOUNT_ID
         env:
