--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "name": "knowledge-map",
+  "private": true,
+  "workspaces": [
+    "apps/*"
+  ],
   "dependencies": {
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
