refactor: update deploy script to ensure functions are copied correctly before deployment

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   ],
   "scripts": {
     "sync:functions": "rm -rf functions && cp -R api functions",
-    "deploy:pages": "npm run sync:functions && npm run build -w apps/k-maps && npx wrangler pages deploy apps/k-maps/dist/k-maps/browser --project-name k-maps --branch main",
+    "deploy:pages": "npm run sync:functions && npm run build -w apps/k-maps && rm -rf apps/k-maps/dist/k-maps/browser/functions && cp -R functions apps/k-maps/dist/k-maps/browser/functions && npx wrangler pages deploy apps/k-maps/dist/k-maps/browser --project-name k-maps --branch main",
     "deploy:ionic": "npm run build -w apps/app-k-maps && npx wrangler pages deploy apps/app-k-maps/www --project-name app-k-maps --branch main",
     "deploy:all": "npm run deploy:pages && npm run deploy:ionic"
   },
