--- a/apps/k-maps/package.json
+++ b/apps/k-maps/package.json
@@ -39,6 +39,7 @@
     "@coreui/utils": "^2.0.2",
     "chart.js": "^4.5.0",
     "lodash-es": "^4.17.21",
+    "marked": "^5.1.2",
     "ngx-scrollbar": "^13.0.3",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1",
@@ -51,6 +52,7 @@
     "@angular/compiler-cli": "^20.3.3",
     "@types/jasmine": "^5.1.9",
     "@types/lodash-es": "^4.17.12",
+    "@types/marked": "^5.0.2",
     "@types/node": "^22.19.7",
     "baseline-browser-mapping": "^2.9.14",
     "jasmine-core": "^5.11.0",
