Fix table names and schemas

--- a/apps/k-maps/package.json
+++ b/apps/k-maps/package.json
@@ -15,7 +15,8 @@
     "start": "ng serve -o",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "tsc --noEmit -p tsconfig.app.json"
   },
   "private": true,
   "dependencies": {
